# ffx-reconstructed

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  VERSIONING.md  build.bat  build_output.txt
build_test/: decode_phyre.c  water_00.tga
docs/: RECONSTRUCTION_LOG.md
include/lua/: lua.hpp  lua_config.h
pseudocode/: README.md  functions_600000_800000.json
pseudocode/boot/: FFX_Scene_FieldServiceTick.c  FFX_Scene_MainLoopTick.c  FFX_System_SystemBootSequence.c
pseudocode/font/: FFX_Font_GetSafeColorKey.c  FFX_Menu2D_DrawAtlasQuad_FullSize.c  FFX_Menu_DrawRowString.c  FFX_Menu_DrawRowStringDefault.c  FFX_Menu_DrawString.c  FFX_System_DisplaySplashLoad_structural.c  FFX_TextLayout_RenderStringWithColor.c
pseudocode/menu2d/: FFX_Menu2D_DrawAtlasQuad.c  FFX_Menu2D_DrawAtlasQuadGeneric.c  FFX_Menu2D_DrawCharQuadWithColor.c  FFX_Menu2D_DrawFormattedNumber.c  FFX_Menu2D_DrawStringCenteredInternal.c  FFX_Menu2D_DrawTexQuadAtlas.c  FFX_Menu2D_DrawTextBlockGradient.c  FFX_Menu2D_DrawTextHeaderWithColor.c  FFX_Menu2D_GetAtlasDimensions.c  FFX_Menu2D_RenderColorQuad.c  FFX_Menu2D_RenderEnqueueQuad.c  FFX_Menu2D_RenderSolidColorQuad.c  FFX_Menu2D_ScaleX_1920To512.c  FFX_Menu2D_ScaleY_1080To416.c  FFX_Menu2D_TableLookupAtlasBase.c  FFX_Menu2D_TexHandleByAtlasId.c  FFX_Menu2D_TitleBarDraw.c
pseudocode/range_400000_600000/: INDEX.md  extract_all.py  funcs_400000_600000.json  gen_index.py  page_00000.json  page_05000.json  page_10000.json  page_15000.json  paginate_funcs.ps1  test_batch.json
pseudocode/range_600000_800000/: 600920_sub_600920.c  600960_sub_600960.c  6009a0_sub_6009A0.c  6009e0_sub_6009E0.c  600a20_sub_600A20.c  600a60_sub_600A60.c  600aa0_sub_600AA0.c  600ae0_sub_600AE0.c  600b20_sub_600B20.c  600b60_sub_600B60.c  600ba0_sub_600BA0.c  600be0_sub_600BE0.c  600c20_sub_600C20.c  600c60_sub_600C60.c  600ca0_sub_600CA0.c  600ce0_sub_600CE0.c  600d20_sub_600D20.c  600d60_sub_600D60.c  600da0_sub_600DA0.c  600de0_sub_600DE0.c  600e20_sub_600E20.c  600e60_sub_600E60.c  600ea0_sub_600EA0.c  600ee0_sub_600EE0.c  600f20_sub_600F20.c  600f60_sub_600F60.c  600fa0_sub_600FA0.c  600fe0_sub_600FE0.c  601020_sub_601020.c  601060_sub_601060.c  6010a0_sub_6010A0.c  6010e0_sub_6010E0.c  601120_sub_601120.c  601160_sub_601160.c  6011a0_sub_6011A0.c  6011c0_sub_6011C0.c  6011f0_sub_6011F0.c  601220_sub_601220.c  601250_sub_601250.c  601270_sub_601270.c  (+10661 more)
pseudocode/range_800000_A00000/: 800000_sub_800000.c  800001_sub_800001.c  800010_sub_800010.c  800090_FFX_Magic_ProcessPendingQueue_structural.c  8001e0_sub_8001E0.c  800250_sub_800250.c  8002b0_sub_8002B0.c  800360_sub_800360.c  8004a0_sub_8004A0.c  800510_sub_800510.c  800520_sub_800520.c  800530_FFX_Magic_RunPhase0Wrapper_structural.c  800590_FFX_Magic_RunPhase1Wrapper_structural.c  800610_sub_800610.c  800620_sub_800620.c  800690_sub_800690.c  8007d0_sub_8007D0.c  800880_sub_800880.c  800890_sub_800890.c  8008e0_sub_8008E0.c  800950_FFX_Magic_RunPhase2Wrapper_structural.c  802af0_sub_802AF0.c  80cd60_FFX_Magic_RunRuntimeRootPhase_structural.c  864180_FFX_Atel_InterpretWorkerOpcodes.c  INDEX.md  SESSION_INFO.md  batch_decompile.py  batch_decompile_all.py
pseudocode/range_800000_A00000_v2/: 800000_sub_800000.c  800001_sub_800001.c  800010_sub_800010.c  800090_FFX_Magic_ProcessPendingQueue_structural.c  8001e0_sub_8001E0.c  800250_sub_800250.c  8002b0_sub_8002B0.c  800360_sub_800360.c  8004a0_sub_8004A0.c  800510_sub_800510.c  800520_sub_800520.c  800530_FFX_Magic_RunPhase0Wrapper_structural.c  800590_FFX_Magic_RunPhase1Wrapper_structural.c  800610_sub_800610.c  800620_sub_800620.c  800690_sub_800690.c  8007d0_sub_8007D0.c  800880_sub_800880.c  800890_sub_800890.c  8008e0_sub_8008E0.c  800950_FFX_Magic_RunPhase2Wrapper_structural.c  8009d0_sub_8009D0.c  800a10_sub_800A10.c  800a60_sub_800A60.c  800a90_sub_800A90.c  800ad0_sub_800AD0.c  800b00_sub_800B00.c  800b30_sub_800B30.c  800bb0_sub_800BB0.c  800bf0_sub_800BF0.c  800c30_sub_800C30.c  800c80_sub_800C80.c  800cc0_sub_800CC0.c  800d10_sub_800D10.c  800d40_sub_800D40.c  800d70_sub_800D70.c  800da0_sub_800DA0.c  800dd0_sub_800DD0.c  800e80_sub_800E80.c  800ef0_sub_800EF0.c  (+1965 more)
pseudocode/range_A00000_C00000/: 0xa00010_sub_A00010.c  0xa00140_sub_A00140.c  0xa00160_sub_A00160.c  0xa00600_sub_A00600.c  0xa00a70_sub_A00A70.c  0xa01040_sub_A01040.c  0xa012f0_sub_A012F0.c  (+6749 more)
scripts/: extract_rdata.py
stubs/: stub_d3d11.cpp  stub_fmod.cpp  stub_iggy.cpp  stub_steam.cpp  stub_win32.cpp
test/: CMakeLists.txt  test_battle_hp_compute.cpp  test_phyre_camera.cpp  test_phyre_pclass_descriptor.cpp  test_phyre_string.cpp  test_rdata_dump.cpp  test_save_crc.cpp  test_stubs.cpp
(+62 files in other folders)
